# GTS_Plugin

./: .clang-tidy  .gitignore  .uncrustify.cfg  2.0.0-PR4Changelog.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
contrib/Distribution/Config/: GtsInput.toml  GtsPlugin.toml  GtsPlugin.yaml  GtsRuntime.toml  GtsRuntime.yaml
contrib/Distribution/Papyrus/: GtsCamera.pex  GtsControl.pex  GtsEvent.pex  GtsHeight.pex  GtsPlugin.pex  GtsSMConfigMenu.pex  GtsSM_HotKeys.pex  GtsScale.pex
contrib/Distribution/PapyrusSource/: GtsCamera.psc  GtsControl.psc  GtsPlugin.psc  GtsSMConfigMenu.psc  GtsSM_HotKeys.psc  GtsScale.psc
contrib/Distribution/esps/: GtsSizeMatters.esp
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
contrib/Distribution/mcm/: config.json  keybinds.json  settings.ini
include/Gts/: Gts.h  HitCounterManager.h
modules/model/: giant.ixx
src/: ActionSettings.hpp  Config.cpp  Config.h  Config.hpp  GtsManager.cpp  GtsManager.h  HitCounterManager.cpp  Main.cpp  PCH.hpp  Papyrus.cpp  Papyrus.h  actorUtils.cpp  actorUtils.hpp  events.cpp  events.hpp  footstep.cpp  footstep.h  height.cpp  height.h  highheel.cpp  highheel.h  hooks.cpp  hooks.h  modevent.cpp  modevent.h  node.cpp  node.h  node.hpp  papyrus.cpp  papyrus.h  papyrusUtils.hpp  persistant.cpp  persistant.h  persistent.cpp  persistent.h  profiler.cpp  profiler.hpp  raycast.cpp  raycast.h  raycast.hpp  (+16 more)
src/UI/: DebugAPI.cpp  DebugAPI.hpp
src/colliders/: RE.cpp  RE.hpp  actor.cpp  actor.hpp  allraycollector.cpp  allraycollector.hpp  charcontroller.cpp  charcontroller.hpp  common.cpp  common.hpp  ragdoll.cpp  ragdoll.hpp
src/data/: cosave.cpp  cosave.hpp  persistent.cpp  persistent.h  persistent.hpp  plugin.cpp  plugin.hpp  re.cpp  re.hpp  runtime.cpp  runtime.h  runtime.hpp  tasks.hpp  time.cpp  time.hpp  transient.cpp  transient.h  transient.hpp
src/hooks/: BShkbAnimationGraph.cpp  BShkbAnimationGraph.hpp  Experiments.cpp  Movement.cpp  Pushback.cpp  RE.cpp  RE.hpp  Stealth.cpp  actor.cpp  actor.h  actor.hpp  actorRotation.cpp  branchhook.hpp  callhook.hpp  cameraState.cpp  cameraState.hpp  character.cpp  character.h  character.hpp  damage.cpp  frame_update.cpp  frame_update.h  functionhook.cpp  functionhook.hpp  havok.cpp  havok.h  havok.hpp  headTracking.cpp  headTracking.hpp  hitprocess.hpp  hkbBehaviorGraph.cpp  hooks.cpp  hooks.hpp  impact.cpp  impact.h  impact.hpp  jump.cpp  jump.hpp  magicTarget.cpp  magicTarget.hpp  (+23 more)
src/hooks/Detours/: creatwth.cpp  detours.cpp  detours.h  disasm.cpp  image.cpp  modules.cpp  uimports.cpp
src/magic/: MagicManager.cpp  MagicManager.h  explosive_growth.cpp  explosive_growth.h  magic.cpp  magic.h  magic.hpp
src/magic/effects/: CrushGrowth.cpp  CrushGrowth.hpp  EnchGigantism.cpp  EnchGigantism.hpp  GrowthPotion.cpp  GrowthPotion.hpp  GrowthSpurt.cpp  GrowthSpurt.hpp  SizePotion.cpp  SizePotion.hpp  SizeRelatedDamage.cpp  SizeRelatedDamage.hpp  absorb_effect.cpp  absorb_effect.hpp  common.h  common.hpp  explosive_growth.cpp  explosive_growth.hpp  grow_button.cpp  grow_button.h  grow_button.hpp  grow_other.cpp  grow_other.h  grow_other.hpp  grow_other_button.cpp  grow_other_button.h  grow_other_button.hpp  growth.cpp  growth.h  growth.hpp  shrink.cpp  shrink.h  shrink.hpp  shrink_back.cpp  shrink_back.h  shrink_back.hpp  shrink_back_other.cpp  shrink_back_other.h  shrink_back_other.hpp  shrink_button.cpp  (+26 more)
src/managers/: Actors.hpp  AnimationManager.cpp  AnimationManager.hpp  Attributes.cpp  Attributes.hpp  CrushManager.cpp  CrushManager.hpp  GTSControlMap.cpp  GTSControlMap.hpp  GrabAnimationController.cpp  GrabAnimationController.hpp  GrowthTremorManager.cpp  GrowthTremorManager.hpp  GtsManager.cpp  GtsManager.h  GtsManager.hpp  GtsQuest.cpp  GtsQuest.hpp  GtsSizeManager.cpp  GtsSizeManager.hpp  InputManager.cpp  InputManager.hpp  OverkillManager.cpp  RandomGrowth.cpp  RandomGrowth.hpp  RipClothManager.cpp  RipClothManager.hpp  Rumble.cpp  Rumble.hpp  ShrinkToNothingManager.cpp  ShrinkToNothingManager.hpp  SkrinkToNothingManager.hpp  ThighSandwichController.cpp  ThighSandwichController.hpp  altcamera.cpp  altcamera.hpp  camera.cpp  camera.hpp  collider.cpp  collider.hpp  (+33 more)
src/managers/ai/: ai_Manager.cpp  ai_Manager.hpp  ai_PerformAction.cpp  ai_SelectAction.cpp  aifunctions.cpp  aifunctions.hpp  aimanager.cpp  aimanager.hpp  headtracking.cpp  headtracking.hpp
src/managers/animation/: ActorVore.cpp  ActorVore.hpp  AnimationInputManager.cpp  AnimationInputManager.hpp  AnimationManager.cpp  AnimationManager.hpp  Animation_Grab.cpp  Animation_Grab.hpp  Animation_Stomp.cpp  Animation_Stomp.hpp  Animation_ThighCrush.cpp  Animation_ThighCrush.hpp  AttachPoint.cpp  AttachPoint.hpp  BoobCrush.cpp  BoobCrush.hpp  ButtCrush.cpp  Compat.cpp  Compat.hpp  CrawlVore.cpp  CrawlVore.hpp  Crawling.cpp  FootGrind.cpp  FootGrind.hpp  FootTrample.cpp  Grab.cpp  Grab.hpp  Grab_Attack.cpp  Grab_Sneak.cpp  Grab_Sneak.hpp  Grab_Sneak_Vore.cpp  Grab_Sneak_Vore.hpp  Grab_Throw.cpp  Growth.cpp  HugHeal.cpp  HugShrink.cpp  HugShrink.hpp  Kicks.cpp  Kicks.hpp  Proning.cpp  (+25 more)
src/managers/cameras/: alt.cpp  alt.hpp  altProne.cpp  altProne.hpp  (+32 more)
src/model/: giant.cpp  giant.hpp  models.hpp
src/models/: serde.cpp  serde.hpp
src/papyrus/: camera.cpp  camera.hpp  events.cpp  events.hpp  height.cpp  height.h  papyrus.cpp  papyrus.h  plugin.cpp  plugin.hpp  scale.cpp  scale.h  totalcontrol.cpp
src/rays/: allcollector.cpp  allcollector.hpp  raycast.cpp
src/scale/: height.cpp  height.h  height.hpp  modscale.cpp  modscale.hpp  scale.cpp  scale.hpp  scalespellmanager.cpp  scalespellmanager.hpp
src/utils/: ControlUtils.cpp  ControlUtils.hpp  DeathReport.cpp  DeathReport.hpp  DifficultyUtils.cpp  DifficultyUtils.hpp  DynamicScale.cpp  DynamicScale.hpp  InputFunctions.cpp  SurvivalMode.cpp  SurvivalMode.hpp  actorUtils.cpp  actorUtils.hpp  av.cpp  camera.cpp  camera.hpp  debug.cpp  debug.hpp  dinput.hpp  findActor.cpp  findActor.hpp  fmt.cpp  fmt.hpp  looting.cpp  looting.hpp  smooth.cpp  smooth.hpp  text.cpp  text.hpp
(+85 files in other folders)
